<resources>
    <string name="app_name">Parola Defteri</string>
    <string name="search">Ara</string>
    <string name="create_password_text">Şifre Oluştur</string>
    <string name="press_back_again_text">Tekrar Geri Basın!</string>
    <string name="edit_text">Düzenle</string>
    <string name="delete_text">Sil</string>
    <string name="add_to_favourites_text">Favorilere Ekle</string>
    <string name="your_generated_password_is_text">Oluşturulan şifre</string>
    <string name="password_text">Şifre</string>
    <string name="include_uppercase_letters_text">Büyük Harfleri Dahil Et</string>
    <string name="include_lowercase_letters_text">Küçük Harfleri Dahil Et</string>
    <string name="include_numbers_text">Sayıları Dahil Et</string>
    <string name="include_symbols_text">Sembolleri Dahil Et</string>
    <string name="password_length_text">Şifre Uzunluğu</string>
    <string name="generate_text">Oluştur</string>
    <string name="app_description_text">İki seviyeli şifrelemeyle desteklenen son derece güvenli uygulamamızla tüm hesaplarınızı, şifrelerinizi ve diğer kimlik bilgilerinizi güvenli bir şekilde yönetin.</string>
    <string name="get_started_text">Başla</string>
    <string name="password_hint_text">Şifre İpucu</string>
    <string name="create_password_description_text">Tüm kimlik bilgilerinizi güvence altına almak için bir uygulama kilidi şifresi belirleyin.</string>
    <string name="password_hint_description_text">Parola İpucu, parolanızı unutmanız durumunda hatırlamanıza yardımcı olacaktır.</string>
    <string name="enable_anti_bruteforce_mechanism_text">Brute Force Karşıtı Mekanizmayı Etkinleştir.</string>
    <string name="create_account_text">Hesap Oluştur</string>
    <string name="submit_text">Onayla</string>
    <string name="this_is_password_hint_text">Bu Şifre İpucudur</string>
    <string name="try_again_after_60_seconds_text">60 Saniye sonra tekrar deneyin!</string>
    <string name="change_password_text">Şifre Değiştir</string>
    <string name="old_password_text">Eski Şifre</string>
    <string name="old_password_description_text">Şifreyi değiştirmek isteyen kişinin gerçekten siz olduğunuzu doğrulamak için önceki şifrenizi girin.</string>
    <string name="update_password_text">Tüm kimlik bilgilerinizi güvence altına almak için bir uygulama kilidi şifresi belirleyin.</string>
    <string name="title_text">Başlık</string>
    <string name="entry_title_hint_text">Örneğin, Instagram</string>
    <string name="category_text">Kategori</string>
    <string name="work_text">İş</string>
    <string name="social_text">Sosyal</string>
    <string name="mails_text">E-posta</string>
    <string name="cards_text">Kart</string>
    <string name="other_text">Diğer</string>
    <string name="account_information_text">Hesap Bilgisi</string>
    <string name="sample_email_text">sample@sample.com</string>
    <string name="add_text">Ekle</string>
    <string name="username_text">Kullanıcı Adı</string>
    <string name="instagram_text">Instagram</string>
    <string name="phone_number_text">Telefon Numarası</string>
    <string name="website_text">Website</string>
    <string name="note_text">Not</string>
    <string name="copied_text">kopyalandı!</string>
    <string name="logo_selected_text">logosu seçildi!</string>
    <string name="saving_text">Kaydediliyor</string>
    <string name="saving_description_text">Lütfen bekleyin, tüm bilgilerinizi şifreleyip kaydediyoruz</string>
    <string name="account_detail_error_text">Hesabınızla ilgili en az bir ayrıntı eklemelisiniz!</string>
    <string name="select_category_text">Bir kategori seçmelisiniz!</string>
    <string name="title_cannot_blank_text">Başlık boş bırakılamaz!</string>
    <string name="some_notes_text">Buraya bazı notlar veya ayrıntılar ekleyebilirsiniz</string>
    <string name="strong_password_text">Her zaman güçlü şifreler tutun</string>
    <string name="eg_text">Örneğin</string>
    <string name="sample_phone_number_text">+90 555 555 55 55</string>
    <string name="sample_website_text">www.sample.com</string>
    <string name="validated_text">Doğrulandı</string>
    <string name="error_text">Bir Hata Oluştu!</string>
    <string name="note_cannot_blank_text">Not boş bırakılamaz!</string>
    <string name="website_cannot_blank_text">Web sitesi boş bırakılamaz!</string>
    <string name="password_cannot_blank_text">Şifre boş bırakılamaz!</string>
    <string name="phone_number_cannot_blank_text">Telefon numarası boş bırakılamaz!</string>
    <string name="email_cannot_blank_text">E-posta boş bırakılamaz!</string>
    <string name="username_cannot_blank_text">Kullanıcı adı boş bırakılamaz!</string>
    <string name="incorrect_email_format_text">Hatalı e-posta formatı!</string>
    <string name="phone_number_must_more_than_two_digits_text">Telefon numarası iki rakamdan fazla olmalıdır!</string>
    <string name="incorrect_website_format_text">Hatalı web sitesi formatı!</string>
    <string name="incorrect_password_text">Hatalı Şifre!</string>
    <string name="please_wait_text">Lütfen bekleyin</string>
    <string name="seconds_text">saniye</string>
    <string name="anti_bruteforce_mechanism_text">Anti Brute Force Mekanizması</string>
    <string name="anti_bruteforce_mechanism_description_text">Bu mekanizmayı etkinleştirirseniz, arka arkaya üç kez yanlış şifre girdiğinizde 30 saniye beklemeniz gerekecektir. Bu seçeneği etkinleştirmenizi önemle öneririz.</string>
    <string name="ok_text">Tamam</string>
    <string name="old_password_cannot_blank_text">Eski şifre boş bırakılamaz!</string>
    <string name="incorrect_old_password_text">Hatalı eski şifre!</string>
    <string name="password_hint_cannot_blank_text">Şifre ipucu boş bırakılamaz!</string>
    <string name="password_changed_succesfully_text">Parola Başarıyla Değiştirildi!</string>
    <string name="password_must_least_4_letters_long_text">Şifreniz en az 4 harf uzunluğunda olmalıdır!</string>
    <string name="creating_account_text">Hesabınızı oluşturuyoruz</string>
    <string name="generate_password_text">Şifre Oluştur</string>
    <string name="generated_password_text">Oluşturulan Şifre</string>
    <string name="password_copied_text">Şifre Panoya Kopyalandı!</string>
    <string name="please_check_item_text">Lütfen en az bir öğeyi kontrol edin!</string>
    <string name="password_length_cannot_zero_text">Şifre uzunluğu sıfır olamaz!</string>
    <string name="remove_from_favourites_text">Favorilerden Kaldır</string>
    <string name="yes_text">Evet</string>
    <string name="deleted_successfully_text">Silme Başarılı</string>
    <string name="no_text">Hayır</string>
    <string name="added_to_favourites_text">Favorilere Eklendi</string>
    <string name="removed_from_favourites_text">Favorilerden Kaldırıldı</string>
    <string name="delete_description_text">Bu girişi silmek istediğinizden emin misiniz?</string>
    <string name="favourites_text">Favoriler</string>
    <string name="search_for_your_credentials_here_text">Kimlik bilgilerinizi burada arayın</string>
    <string name="exit_text">Çıkış</string>
    <string name="others_text">Diğer</string>
    <string name="all_text">Hepsi</string>
    <string name="open_text">Aç</string>
    <string name="close_text">Kapat</string>
    <string name="cancel_text">İptal</string>
    <string name="authentication_error_text">Doğrulama hatası</string>
    <string name="authentication_succeeded_text">Doğrulama başarılı oldu!</string>
    <string name="authentication_failed_text">Doğrulama başarısız oldu!</string>
    <string name="biometric_error_text">Bu cihazda biyometrik özellik yok.</string>
    <string name="biometric_unavailable_text">Biyometrik özellikler şu anda kullanılamıyor.</string>
    <string name="add_new_item_text">Yeni bir öğe eklemek için burayı tıklayın</string>
        <string name="select_icon_text">Bir simge seçmek için burayı tıklayın</string>
</resources>